--- a/Project.toml
+++ b/Project.toml
@@ -32,36 +32,37 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
 
 [compat]
-AbaqusReader = "0.2.5"
-Aqua = "0.8"
-ArgParse = "1.1.4"
-CSV = "0.10.11"
-DataFrames = "1.6.1"
-Dierckx = "0.5"
-Exodus = "0.11.0"
-FastGaussQuadrature = "1.0"
-JSON3 = "1.13.2"
-LibGit2 = "1.4.0"
-LinearAlgebra = "1.10.0"
-Logging = "1.3.0"
-LoggingExtras = "1.0.3"
-MPI = "0.20.19"
-NearestNeighbors = "0.4.13"
-Pkg = "1.5.0"
-Printf = "1.10.0"
-ProgressBars = "1.5.1"
-Random = "1.6.0"
-Reexport = "1.2.2"
-Rotations = "1.6.1"
-Statistics = "1.8.0"
-TensorOperations = "4.0.7"
-Tensors = "1.16.1"
-Test = "1.8.0"
-TestSetExtensions = "2.0.0"
-TimerOutputs = "0.5.23"
-YAML = "0.4.9"
-ZipArchives = "1.1.1"
-julia = "1"
+AbaqusReader = "^0.2.5"
+Aqua = "^0.8"
+ArgParse = "^1"
+CSV = "^0.10"
+DataFrames = "^1"
+Dierckx = "^0.5"
+DifferentialEquations = "^7"
+Exodus = "^0.11"
+FastGaussQuadrature = "^1"
+JSON3 = "^1"
+LibGit2 = "^1"
+LinearAlgebra = "^1"
+Logging = "^1"
+LoggingExtras = "^1"
+MPI = "^0.20"
+NearestNeighbors = "^0.4"
+Pkg = "^1"
+Printf = "^1"
+ProgressBars = "^1"
+Random = "^1"
+Reexport = "^1"
+Rotations = "^1"
+Statistics = "^1"
+TensorOperations = "^4"
+Tensors = "^1"
+Test = "^1"
+TestSetExtensions = "^2"
+TimerOutputs = "^0.5"
+YAML = "^0.4"
+ZipArchives = "^1"
+julia = "^1"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
