--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ release:
     - tags
   script:
     - apt-get -y install build-essential
-    - julia --project=@. -e 'import Pkg; Pkg.test(); Pkg.add("PackageCompiler");
+    - julia --project=@. -e 'import Pkg; Pkg.add("PackageCompiler");
       using PackageCompiler;
       create_app(".", "build", executables=["PeriLab" => "main", "get_examples" => "get_examples"], incremental=true)'
   artifacts:
