--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TensorOperations = "6aa20fa7-93e2-5fca-9bc0-fbd0db3c71a2"
 Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
@@ -52,6 +53,7 @@ ProgressBars = "^1"
 Random = "^1"
 Reexport = "^1"
 Rotations = "^1"
+StaticArrays = "^1"
 Statistics = "^1"
 TensorOperations = "^4"
 Tensors = "^1"
