--- a/Project.toml
+++ b/Project.toml
@@ -47,6 +47,7 @@ LinearAlgebra = "^1"
 Logging = "^1"
 LoggingExtras = "^1"
 MPI = "^0.20"
+MPIPreferences = "^0.1"
 NearestNeighbors = "^0.4"
 Pkg = "^1"
 Printf = "^1"
