added Datetime and remov git warning

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ AbaqusReader = "bc6b9049-e460-56d6-94b4-a597b2c0390d"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
@@ -38,6 +39,7 @@ Aqua = "^0.8"
 ArgParse = "^1"
 CSV = "^0.10"
 DataFrames = "^1"
+Dates = "^1"
 Dierckx = "^0.5"
 Exodus = "^0.11"
 FastGaussQuadrature = "^1"
