--- a/examples/Benchmark/Benchmark_4dx_1000.yaml
+++ b/examples/Benchmark/Benchmark_4dx_1000.yaml
@@ -35,6 +35,7 @@ PeriLab:
     Input Mesh File: mesh1000.txt
     Node Sets:
       Node Set 1: ns1000.txt
+    Neighborhood Distribution: True
     Type: Text File
     Bond Filters:
       bf_1:
