--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -52,6 +53,7 @@ MPI = "^0.20"
 MPIPreferences = "^0.1"
 NearestNeighbors = "^0.4"
 Pkg = "^1"
+PrettyTables = "^2"
 Printf = "^1"
 ProgressBars = "^1"
 Random = "^1"
