--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,11 +8,11 @@ name: PeriLab CI
 # events but only for the main branch
 on:
   workflow_dispatch:
-  push:
-    paths:
-      - "src/**"
-    branches:
-      - main
+  # push:
+  #   paths:
+  #     - "src/**"
+  #   branches:
+  #     - main
   pull_request:
     paths:
       - "src/**"
