--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -24,7 +24,12 @@ jobs:
           version: "1.6"
       - uses: julia-actions/cache@v1
       - name: Install dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+        run: |
+          julia --project=docs -e '
+              import Pkg; Pkg.add("Documenter")
+              using Pkg
+              Pkg.develop(PackageSpec(path=pwd()))
+              Pkg.instantiate()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
