--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,11 +8,11 @@ name: PeriLab CI
 # events but only for the main branch
 on:
   workflow_dispatch:
-  # push:
-  #   paths:
-  #     - "src/**"
-  #   branches:
-  #     - main
+  push:
+    paths:
+      - "src/**"
+    branches:
+      - main
   pull_request:
     paths:
       - "src/**"
@@ -42,8 +42,6 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
       - uses: julia-actions/cache@v1
-
-      # 🚗
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v4
@@ -51,3 +49,4 @@ jobs:
           files: lcov.info
           fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
+          slug: PeriHub/PeriLab.jl
