--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -50,10 +50,10 @@ jobs:
         id: get_version
         run: echo "PERILAB_VERSION=$(awk -F'"' '/version/{print $2}' Project.toml)" >> $GITHUB_OUTPUT
       - name: Build Docker image
-        run: docker build -t perihub/perilab:$PERILAB_VERSION .
+        run: docker build -t perihub/perilab:${{ steps.get_version.outputs.PERILAB_VERSION }} .
       - name: Publish to Registry
-        run: docker push perihub/perilab:$PERILAB_VERSION
+        run: docker push perihub/perilab:${{ steps.get_version.outputs.PERILAB_VERSION }}
       - name: Retag latest
-        run: docker tag perihub/perilab:$PERILAB_VERSION perihub/perilab:latest
+        run: docker tag perihub/perilab:${{ steps.get_version.outputs.PERILAB_VERSION }} perihub/perilab:latest
       - name: Publish to Registry
         run: docker push perihub/perilab:latest
