--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ CSV = "^0.10"
 DataFrames = "^1"
 Dates = "^1"
 Dierckx = "^0.5"
-Exodus = "^0.11, 0.13"
+Exodus = "^0"
 FastGaussQuadrature = "^1"
 JSON3 = "^1"
 LibGit2 = "^1"
