--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ CSV = "^0.10"
 DataFrames = "^1"
 Dates = "^1"
 Dierckx = "^0.5"
-Exodus = "^0.12"
+Exodus = "^0.12, 0.13"
 FastGaussQuadrature = "^1"
 JSON3 = "^1"
 LibGit2 = "^1"
