--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: JuliaRegistries/TagBot@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          ssh: ${{ secrets.SSH_KEY }}
+          ssh: ${{ secrets.DOCUMENTER_KEY }}
   DockerHub:
     if: github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot'
     runs-on: ubuntu-latest
