--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,5 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
+DocumenterMermaid = "a078cd44-4d9c-4618-b545-3ab9d77f9177"
 PeriLab = "2ecefcea-59f0-46dd-9cfd-1d2b8cc5f112"
