--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,6 @@ ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-Delaunay = "07eb4e4e-0c6d-46ef-bc4e-83d5e5d860a9"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
@@ -31,6 +30,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TensorOperations = "6aa20fa7-93e2-5fca-9bc0-fbd0db3c71a2"
 Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
+TetGen = "c5d3f3f7-f850-59f6-8a2e-ffc6dc1317ea"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
@@ -42,7 +42,6 @@ ArgParse = "^1"
 CSV = "^0.10"
 DataFrames = "^1"
 Dates = "^1"
-Delaunay = "^1"
 Dierckx = "^0.5"
 Exodus = "^0.12"
 FastGaussQuadrature = "^1"
@@ -67,6 +66,7 @@ TensorOperations = "^4"
 Tensors = "^1"
 Test = "^1"
 TestSetExtensions = "^2"
+TetGen = "^1"
 TimerOutputs = "^0.5"
 YAML = "^0.4"
 ZipArchives = "^1"
