--- a/Project.toml
+++ b/Project.toml
@@ -69,7 +69,7 @@ TestSetExtensions = "^2"
 TetGen = "^1"
 TimerOutputs = "^0.5"
 YAML = "^0.4"
-ZipArchives = "^1"
+ZipArchives = "^1, 2"
 julia = "^1.6"
 
 [extras]
