--- a/.github/ISSUE_TEMPLATE/02_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/02_feature_request.yml
@@ -4,7 +4,7 @@
 
 name: 🚀 Feature request
 description: If you have a feature request 💡
-title: "[feature]: "
+title: "[Feature]: "
 labels: ["feature"]
 body:
   - type: markdown
@@ -21,15 +21,14 @@ body:
   - type: textarea
     id: related
     attributes:
-      label: Is it something you currently you cannot do? Is this related to an issue/problem?
+      label: Is it something you currently cannot do? Is this related to an issue/problem?
     validations:
       required: false
   - type: textarea
     id: idea
     attributes:
       label: Implementation details
-      description: "Let us know if you already have an idea for how to implement this feature."
-      render: bash
+      description: Let us know if you already have an idea for how to implement this feature.
     validations:
       required: false
   - type: dropdown
@@ -41,3 +40,4 @@ body:
         - Yes
         - Yes, but I need help
         - No
+      default: 2
