--- a/.github/ISSUE_TEMPLATE/02_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/02_feature_request.yml
@@ -18,3 +18,16 @@ body:
       value: "I would like to ..."
     validations:
       required: true
+  - type: textarea
+    id: related
+    attributes:
+      label: Is it something you currently cannot do? Is this related to an issue/problem?
+    validations:
+      required: false
+  - type: textarea
+    id: idea
+    attributes:
+      label: Implementation details
+      description: Let us know if you already have an idea for how to implement this feature.
+    validations:
+      required: false
