--- a/test/fullscale_tests/test_body_force/body_force.yaml
+++ b/test/fullscale_tests/test_body_force/body_force.yaml
@@ -57,6 +57,7 @@ PeriLab:
         Number of Neighbors: True
         Forces: True
         External Forces: True
+        External Force Densities: True
         Velocity: True
         Acceleration: True
         Volume: True
