CompatHelper: add new compat entry for Combinatorics at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ AbaqusReader = "^0.2.6"
 Aqua = "^0.8"
 ArgParse = "^1"
 CSV = "^0.10"
+Combinatorics = "1"
 DataFrames = "^1"
 Dates = "^1"
 Dierckx = "^0.5"
